--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "leaflet": "^1.9.4",
+    "leaflet": "1.9.4",
     "react": "^19.2.1",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "4.2.1",
     "react-dom": "^19.2.1"
   },
   "devDependencies": {
